# mangalib-downloader

./: .gitignore  LICENSE  README.md  app.py  cli.py  pyproject.toml  requirements.txt
mangalib_dl/: __init__.py  api.py  config.py  downloader.py  models.py  packager.py  ratelimit.py  service.py  storage.py
